@startuml uml

abstract class Block #90e0ef {
	+void updateBlock()
}

class Road #90e0ef{
	+void updateRoad()
	+void resetRoad()
    +void generateIntersection(bloc : Block)
}

class GameView #90e0ef {
	+ void update()
}

class SimpleRoad #90e0ef {}

class IntersectionRoad #90e0ef {}

GameView   -->  "1" Road

Road  --> "*"  Block

Block <|--  SimpleRoad
Block <|-- IntersectionRoad

@enduml